--- a/web/src/pages/Profile/profile.css
+++ b/web/src/pages/Profile/profile.css
@@ -13,9 +13,6 @@ div#top > button{
     padding: 0.5em;
     margin-top: 0.5em;
 }
-div#top > div.info > h3{
-    display: inline-block;
-}
 div > div.dropdown{
     float: right;
 }
@@ -44,12 +41,126 @@ form#editForm > button{
 div#top > div.post-container > div > div#dropDown > button.drop-down{
     background: white;
 }
-a,
-.lists>button {
-    border: none;
-    width: 9em;
-    background: bottom;
+div#top > div.profile{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    justify-content: right;
+    padding: 3em 1em 1em;
+    position: static;
+}
+div#top > div.profile > img{
+    border: 1px solid black;
+    border-radius: 100%;
+    height: 6em;
+    object-fit: cover;
+    width: 6em;
+}
+div#top > div.profile > h2.profileName{
+    color: #252525;
+    padding: 0.5em 0;
+}
+div#top > div.profile > h3.profileEmail{
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 1em;
+    align-items: center;
+    display: flex;
+    gap: 1em;
+}
+div#top > div.profile > div.profileImageContainer > label.editIMG{
+    color: #284352;
+    left: 4em;
+    position: relative;
+    top: -12em;
+    z-index: 10!important;
+}
+div#top > div.profile > div.profileActions{
+    align-items: center;
+    display: flex;
+    gap: 1em;
+}
+
+div.post-container{
+    padding: 1em;
+    margin: 2em;
+    border-radius: 0.5em;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    background-color: white;
+  }
+  div.post-container > div > div#postN{
+    display: flex;
+  }
+  div.post-container > div > div#postN > div#profilePic{
+    border: 1px solid black;
+    width: 4em;
+    height: 4em;
+    border-radius: 50%;
+  }
+  div.post-container > div > div#postN > div#postPre > h2{
+    margin-left: 0.5em;
+    margin-bottom: 0.1em;
+    color: #000000;
+  }
+  div.post-container > div > div#postN > div#postPre > h4{
+    margin-left: 0.8em;
+    font-size: larger;
+    color: #000000;
+  }
+  div.post-container > div > div#postN > div#postPre > p{
+    margin-left: 0.8em;
+    color: #282253;
+  }
+  div.post-container > div > div#postN > div#postPre > img{
+    width: 100%;
+    border-radius: 0.2em;
+  }
+div#top > div.profile > div.profileActions> .logOutButton {
+    background-color: #EAF3FA;
+    border: 0;
+    border-radius: 5px!important;
     color: black;
-    text-decoration: none!important;
-    margin: 0.5em 0.3em!important;
+    font-size: 1em;
+    margin: 0!important;
+    padding: 0.5em 1em!important;
+    width: -webkit-fit-content!important;
+    width: -moz-fit-content!important;
+    width: fit-content!important;
+    width: 8em!important;
+}
+.swal2-input {
+    width: 90% !important;
+    margin: auto !important;
+    margin-top: 1em !important;
+    margin-bottom: 1em !important;
+    border: 1px solid #888 !important;
+    border-radius: 0px !important;
+    color: #212121;
+    border-radius: 5px !important;
+}
+
+.swal2-input:focus,
+.swal2-input:hover,
+.swal2-input:active {
+    box-shadow: 0 0 0 !important;
+    border: 1px solid #284352;
+}
+
+.swal2-cancel:focus,
+.swal2-cancel:hover,
+.swal2-cancel:active,
+.swal2-confirm:focus,
+.swal2-confirm:hover,
+.swal2-confirm:active {
+    box-shadow: 0 0 0 !important;
+}
+div:where(.swal2-container).swal2-center>.swal2-popup{
+    margin-top: 3em;
+}
+@media (max-width: 445px){
+    .editIMG {
+        top: -16em!important;
+        left: 3em!important;
+    }
 }
