--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,27 +1,50 @@
-nav#isLogin{
-    position: fixed;
-    right: 0px;
-    left: 0px;
-    top: 0px;
-    z-index: 9999;
-}
-nav#isLogin > ul{
-    background-color: aliceblue;
-    display: flex;
-    padding-left: 0.5em;
-    justify-content: space-between;
-}
-nav#isLogin> ul > li{
-    list-style-type: none;
-    font-size: 2em;
-    margin: 0.5em;
-    padding: 0.2em;
-}
-nav#isLogin> ul > li > a:focus{
-    color: blueviolet;
-}
 body{
     font-family: 'Roboto', sans-serif;
     font-weight: 700!important;
     outline: none!important;
+}
+/* navbar and head css */
+div#logoTop{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #c8c7c7;
+  position: fixed;
+  right: 0px;
+  left: 0px;
+  top: 0px;
+  z-index: 9999;
+}
+div#logoTop > img{
+  width: 10em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+div#logoTop > div > li {
+  list-style-type: none;
+  margin: 0.9em;
+  font-size: 2em;
+}
+/* css of nav bar */
+nav#isLogin{
+  position: fixed;
+  right: 0px;
+  left: 0px;
+  top: 7em;
+  z-index: 9999;
+}
+nav#isLogin > ul{
+  background-color: aliceblue;
+  display: flex;
+  padding-left: 0.5em;
+  justify-content: space-between;
+}
+nav#isLogin> ul > li{
+  list-style-type: none;
+  font-size: 2em;
+  margin: 0.5em;
+  padding: 0.2em;
+}
+nav#isLogin> ul > li > a:focus{
+  color: blueviolet;
 }
