--- a/web/src/pages/Chat/chat.css
+++ b/web/src/pages/Chat/chat.css
@@ -1,10 +1,88 @@
-div > #arrow{
-    font-size: 1.2rem;
-    margin: 0.5em;
-    color: #d12669;
-}
 div#chat{
-    margin-top: 15em;
-    text-align: center;
-    color: #d12669!important;
+    max-width: 425px;
+    margin: auto;
+}
+div#header{
+    background: #d12669;
+    display: flex;
+    color: white;
+    position: fixed;
+    padding: 0.5em;
+    flex-direction: row;
+    width: 425px;
+    z-index: 10;
+    top: 0;
+}
+div#header > #arrow{
+    color: white;
+    font-size: 1.8em;
+}
+div#header > h1{
+    font-size: 1.5em;
+    margin-top: 0.6em;
+}
+div#messages{
+    display: flex;
+    flex-direction: column;
+    background-image: url(../../assests/download.jpg);
+    flex-grow: 1;
+    overflow-y: scroll;
+    gap: 1em;
+    justify-content: start;
+    padding: 0.5em;
+    margin-bottom: 4.3em;
+    margin-top: 4.6em;
+}
+div#chat > div#form > form{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #d12669;
+    max-width: 425px;
+    padding: 0.2em;
+    margin: auto;
+    z-index: 10;
+}
+div#chat > div#form > form > label{
+    padding: 0.2em;
+    color: #f1f1f1;
+    font-size: 1.1em;
+}
+div#chat > div#form > form > input{
+    background-color: #d12669;
+    width: 70%;
+    border: 0;
+    color: #f1f1f1!important;
+    padding-left: 0.3em;
+}
+div#chat > div#form > form > input::placeholder {
+    color: #f1f1f1;
+}
+div#chat > div#form > form > button{
+background-color: #d12669;
+    border: 0;
+    color: #f1f1f1!important;
+    width: 0;
+    margin: 0;
+    font-size: 1.3rem;
+}
+/* messages css */
+div#messages > div.my{
+    align-self: flex-end;
+    padding: 0.8em;
+    border-radius: 20px 0px 20px 20px;
+    background:  #F48FB1;
+    color: #000000;
+    max-width: 20em;
+    min-width: 10em;
+}
+div#messages > div.you{
+    align-self: flex-start;
+    padding: 0.8em;
+    max-width: 20em;
+    min-width: 10em;
+    border-radius: 0px 20px 20px 20px;
+    background: #FFD8DB;
+    color: #6E6E61;
 }
