--- a/web/src/pages/Profile/profile.css
+++ b/web/src/pages/Profile/profile.css
@@ -117,7 +117,7 @@ div.post-container{
     border-radius: 0.2em;
   }
 div#top > div.profile > div.profileActions> .logOutButton {
-    background-color: #EAF3FA;
+    background-color: #4AAAFF;
     border: 0;
     border-radius: 5px!important;
     color: black;
